Applied patch: 'sun7i-default/0009-Added-new-backend-based-on-CMA-for-the-Mali-UMP-memo.patch'
from armbian kernel for 'olimex-som204-a20' board

--- a/drivers/gpu/mali/ump/Kbuild
+++ b/drivers/gpu/mali/ump/Kbuild
@@ -43,6 +43,7 @@ ump-y = common/ump_kernel_common.o \
 	linux/ump_kernel_linux.o \
 	linux/ump_kernel_memory_backend_os.o \
 	linux/ump_kernel_memory_backend_dedicated.o \
+	linux/ump_kernel_memory_backend_cma.o \
 	linux/ump_memory_backend.o \
 	linux/ump_ukk_wrappers.o \
 	linux/ump_ukk_ref_wrappers.o \
