Applied patch: 'sun7i-default/0029-dev-spi-sun7i.patch'
from armbian kernel for 'olimex-som204-a20' board

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -370,6 +370,15 @@ config SPI_SUNXI_NDMA
           This selects SPI DMA mode with DMA transfer
           Y select NDMA mode and N select DDMA mode
 
+config SPI_SUN7I
+	tristate "SUN7I SPI Controller"
+	depends on ARCH_SUN7I
+	help
+		Allwinner Soc SPI controller,present on SUN7I chips.
+		Different DMA Architecture than Sun4i
+
+
+
 config SPI_TEGRA
 	tristate "Nvidia Tegra SPI controller"
 	depends on ARCH_TEGRA && TEGRA_SYSTEM_DMA
